--- a/Heating/pyHeat.ipynb
+++ b/Heating/pyHeat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,13 +346,13 @@
     "\n",
     "            \n",
     "            \n",
-    "    plt.savefig('com_heating_plots.pdf')\n",
+    "    plt.savefig('NS_heating.pdf')\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
